@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha2 
+  	- Added 'Your' playlists to leftbar with play and view links
   	- Fixed clear now playing
   	- Fixed now playing issues with Audacious 1.3.x office space style
 
